<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:theme="@style/InputsColors"
    android:background="@color/colorWhite">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/backgroundLogin"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/backlogin"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:background="@drawable/gradient"
                    android:layout_width="match_parent"
                    android:layout_height="201dp" />
            </FrameLayout>
            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:text="@string/login"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/loginInputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorGray" />

                <EditText
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorGray"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionPassword"
                    android:textColor="@color/colorGray"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomPartLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:layout_gravity="center">

                <Button
                    android:background="@drawable/border_botton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continueText"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"/>

                <TextView
                    android:id="@+id/toRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionLogin"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorGray"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>