<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ImageProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/user"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ImageProfile"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/colorBlack"
            android:hint="@string/user"
            android:backgroundTint="@color/colorPrimary"

            android:textColorHint="@color/colorGray" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorBlack"
            android:hint="@string/email"
            android:backgroundTint="@color/colorPrimary"
            android:textColorHint="@color/colorGray"/>

        <EditText
            android:id="@+id/passInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/colorBlack"
            android:hint="@string/password"
            android:backgroundTint="@color/colorPrimary"
            android:textColorHint="@color/colorGray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputs">
        <CheckBox
            android:backgroundTint="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="Aceptar terminos y condiciones"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp">

        <Button
            android:id="@+id/sendButton"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_botton"
            android:text="@string/continueText"
            android:textSize="20sp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/goToLoging"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionRegister"
            android:textAlignment="center"
            android:textColor="@color/colorGray"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>