<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Register"
    android:theme="@style/InputsColors"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="30sp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/user"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/userInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:textColor="@color/colorBlack"
                    android:hint="@string/user"
                    android:textColorHint="@color/colorGray" />

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorBlack"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorGray"/>

                <EditText
                    android:id="@+id/passInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:textColor="@color/colorBlack"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorGray"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <CheckBox
                    android:id="@+id/acceptConditions"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="Aceptar terminos y condiciones"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/sendButton"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_botton"
                    android:text="@string/continueText"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/goToLogin"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionRegister"
                    android:textAlignment="center"
                    android:textColor="@color/colorGray"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>